# numcalc

./: .gitignore  CMakeLists.txt  library.cpp  tests.cpp
include/numcalc/: base_array.h  derivative.h  explicit_fde.h  integration.h  matrix.h  numcalc.h  rootfind.h  rootfind_newton.h  vector.h
tests/: base_array.cpp  derivatives.cpp  explicit_fde.cpp  integration.cpp  matrix.cpp  newton.cpp  vector.cpp
